k8s/postfacto-v2.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postfacto-v2-external-service
  namespace: ingress
  labels:
    app.kubernetes.io/name: 'postfacto'
    app.kubernetes.io/instance: 'postfacto-v2'    
    app.kubernetes.io/component: 'api'
    app.kubernetes.io/part-of: 'postfacto'
    app.kubernetes.io/managed-by: kubernetes
spec:
  type: ExternalName
  externalName: postfacto-v2.postfacto.svc.cluster.local
